--- a/estilos.css
+++ b/estilos.css
@@ -34,37 +34,64 @@ body{
 /*********************MENÚ DE NAVEGACIÓN SUPERIOR*********************/
 
 .top-header{
+  display: grid;
+  grid-template-columns: 20% 20% 20% 33% 7%;
+  place-items: center;
+  position: fixed;
+  top: 12px;
   width: 95%;
   height: 50px;
   z-index: 100;
-  background-color:rgba(37, 37, 37, .4);
+  background-color: #191a1cda;
   border-radius: 10px;
-  margin-top: 5px;
 }
 
-.top-header ul {
-  list-style: none;
-  overflow: hidden; 
-}
-
-.hora{
-  float: right;
-  padding-right: 20px;
+.top-header div {
+  text-align: center;
+  white-space: nowrap;
 }
 
 .escritorios{
-  float: left;
+  text-align: left;
+  padding-right: 60px;
+  overflow: hidden;
+}
+
+.conceptos-top{
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.conceptos-top:hover{
+  transition: 300ms;
+  color: #aaaaaa;
+}
+
+.home{
+  z-index: 200;
+  margin-top: 4px;
+}
+
+.creacion{
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.creacion:hover{
+  transition: 300ms;
+  color: #aaaaaa;
 }
 
 .foto{
   border-radius: 10px;
   width: 35px;
   height: 35px;
-  z-index: 200; 
-  margin-top: -50px;
+  z-index: 200;
+  margin-top: 4px;
 }
 
 .foto:hover{
+  transition: 100ms;
   width: 38px;
   height: 38px;
 }
@@ -72,7 +99,7 @@ body{
 /**************************TERMINAL**************************/
 
 .terminal{
-  margin-top: 150px;
+  margin-top: 200px;
   height: 400px;
   width: 600px;
   background-color: rgba(30, 30, 30, .8, .7); 
@@ -162,7 +189,8 @@ body{
   border-radius: 15px;
   margin-left: 30px;
   height: 300px;
-  background-color: #0a0c0d;
+  /*background-color: #1A1B1F;/*#0a0c0d;*/
+  background-image: url(bg/fondo-ruido3.png);
   font-size: 20px;
   padding: 30px;
   margin-right: 20px;
@@ -178,7 +206,8 @@ body{
   text-align: center;
   border-radius: 15px;
   height: 300px;
-  background-color: #0a0c0d;
+  /*background-color: #1A1B1F;*/
+  background-image: url(bg/fondo-ruido3.png);
   font-size: 20px;
   padding: 30px;
   margin-left: 20px;
@@ -246,9 +275,28 @@ body{
   .desktops{
     grid-template-columns: 50% 50%;
   }
-
 }
 
+@media screen and (max-width: 1446px) {
+  .escritorios{
+    padding-right: 0px;
+  }
+}
+
+@media screen and (max-width: 1098px) {
+
+  .top-header{
+    grid-template-columns: 33% 33% 33%;
+  }
+
+  .hora{
+    display: none;
+  }
+
+  .escritorios{
+    display: none;
+  }
+}
 
 /*
 @media screen and (max-width: 885px) {
